# FitRecommend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
docs/: adr_decisions.md
recommendation/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py
recommendation/adapters/: __init__.py  external_workout_source.py  wger_workout_adapter.py
recommendation/management/commands/: seed_data.py
recommendation/repositories/: __init__.py  base.py  history_repository.py  user_repository.py  workout_repository.py
recommendation/strategies/: __init__.py  base.py  beginner_friendly_strategy.py  calorie_based_strategy.py  goal_based_strategy.py  hybrid_strategy.py  strategy_factory.py
recommendation/templates/: 404.html  base.html
recommendation/templates/partials/: _footer.html  _messages.html  _navbar.html
recommendation/templates/recommendation/: dashboard.html  history.html  history_confirm_delete.html  history_form.html  preferences_form.html  user_confirm_delete.html  user_form.html  user_list.html  user_profile.html  workout_confirm_delete.html  workout_detail.html  workout_form.html  workout_list.html
recommendation/templates/recommendation/auth/: delete_account.html  login.html  register.html
recommendation/views/: auth_controller.py  history_controller.py  preferences_controller.py  recommendation_controller.py  user_controller.py  workout_controller.py
workout_project/: asgi.py  settings.py  urls.py  wsgi.py
