[tool.poetry]
name = "fit-recommmend"
version = "0.1.0"
description = "Sistema de Recomendação de Planos de Treino"
authors = ["Eduardo Lima <eduardojunior010757@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
pillow = "^10.1.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
black = "^23.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

